--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
   <h1>test git remote 2</h1>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, assumenda.
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, assumenda.</p>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed?</p>
 </body>
 
 </html>
