menambahkan style.css dan menambah isi index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <h1>test git remote 2</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, assumenda.</p>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed?</p>
+  <h2>hello word</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, blanditiis.</p>
 </body>
 
 </html>
